ontol-compiler/test-cases/error/parser/def1.on
def // ERROR parse error: expected one of `@private`, `@open`, `@extern`, `@symbol`, identifier
